# 3d-physics-engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md
assets/config/: config.json
include/: AABB.hpp  Ball.hpp  Collision.hpp  Config.hpp  Entity.hpp  Physics.hpp  Quadtree.hpp  Renderer.hpp  ShapeFactory.hpp  Simulation.hpp  Vec.hpp  World.hpp
include/model/: Ball.hpp  CircleEntity.hpp  Collision.hpp  Entity.hpp  Physics.hpp  Quadtree.hpp  World.hpp
include/ui/: Renderer.hpp  ShapeFactory.hpp  Simulation.hpp
main/src/: Entity.cpp  Main.cpp  Physics.cpp  World.cpp
src/: Config.cpp  Entity.cpp  Main.cpp  Vec.cpp  World.cpp
src/main/model/: AABB.cpp  Ball.cpp  CircleEntity.cpp  Collision.cpp  Entity.cpp  Physics.cpp  Quadtree.cpp  Vec.cpp  World.cpp
src/main/ui/: Main.cpp  Renderer.cpp  ShapeFactory.cpp  Simulation.cpp
